@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="63"
+VERSION_BUILD="64"
 
 # $Log$
+#
+# BUILD : 1.3.0.64 (SVN)
+# BUGS  : 407
+# NOTES : Added XMLRPC documentation
 #
 # BUILD : 1.3.0.63 (SVN)
 # BUGS  : 404
